--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,22 +2,22 @@
     "configurations": [
         {
             "type": "java",
-            "name": "Spring Boot-SpringCpssApplication<PJCPSS>",
+            "name": "Spring Boot-SpringCpssApplication<SpringBootCPSS>",
             "request": "launch",
             "cwd": "${workspaceFolder}",
             "console": "internalConsole",
-            "mainClass": "it.kennedy.cpss.PJCPSS.SpringCpssApplication",
-            "projectName": "PJCPSS",
+            "mainClass": "it.kennedy.cpss.springbootcpss.SpringCpssApplication",
+            "projectName": "SpringBootCPSS",
             "args": ""
         },
         {
             "type": "java",
-            "name": "Spring Boot-SpringCpssApplication<PJCPSS>",
+            "name": "Spring Boot-SpringCpssApplication<SpringBootCPSS>",
             "request": "launch",
             "cwd": "${workspaceFolder}",
             "console": "internalConsole",
-            "mainClass": "it.kennedy.cpss.pjcpss.SpringCpssApplication",
-            "projectName": "PJCPSS",
+            "mainClass": "it.kennedy.cpss.springbootcpss.SpringCpssApplication",
+            "projectName": "SpringBootCPSS",
             "args": ""
         }
     ]
