--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode
+
+### SonarQube
+SpringBootCPSS/sonar-project.properties
