--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -52,7 +52,9 @@
         "*.html"
       ],
       "extends": [
-        "plugin:@angular-eslint/template/recommended"
+        "plugin:@angular-eslint/template/recommended",
+        "prettier",
+        "plugin:prettier/recommended"
       ],
       "rules": {
         "@angular-eslint/template/eqeqeq": "error"
