--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "~11.2.10",
     "@angular/platform-browser-dynamic": "~11.2.10",
     "@angular/router": "~11.2.10",
+    "@tailwindcss/forms": "^0.3.3",
+    "@tailwindcss/typography": "^0.4.1",
     "moment": "^2.29.1",
     "ngx-cookie-service": "^11.0.2",
     "rxjs": "~6.6.0",
@@ -40,6 +42,7 @@
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "4.16.1",
     "@typescript-eslint/parser": "4.16.1",
+    "autoprefixer": "^10.2.6",
     "eslint": "^7.6.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "latest",
@@ -52,7 +55,9 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "postcss": "^8.3.5",
     "protractor": "~7.0.0",
+    "tailwindcss": "^2.2.2",
     "ts-node": "~8.3.0",
     "typescript": "~4.1.5"
   }
