--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@tailwindcss/typography": "^0.4.1",
     "moment": "^2.29.1",
     "ngx-cookie-service": "^11.0.2",
+    "primeicons": "^4.1.0",
+    "primeng": "^11.4.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.3"
