--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/router": "~11.2.10",
     "@tailwindcss/forms": "^0.3.3",
     "@tailwindcss/typography": "^0.4.1",
+    "chart.js": "^3.4.0",
     "moment": "^2.29.1",
+    "ng2-charts": "^3.0.0-rc.3",
     "ngx-cookie-service": "^11.0.2",
     "primeicons": "^4.1.0",
     "primeng": "^11.4.3",
